<resources>
    <string name="app_name">SkySphere</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SkySphere</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_map_api_key">AIzaSyB4S_d2HqzbeUQxRLzodOAuLyrNqarEh3k</string>
    <string name="gemini_api_key">AIzaSyAJLOJbXHdCNS72X78uPi_If92bCAsAhgQ</string>
    <string name="settings">Settings</string>
    <string name="Temperature">Temperature</string>
    <string name="Temp_Details">Temperature Details</string>
    <string name="Celsius">°C</string>
    <string name="Fahrenheit">°F</string>
    <string name="Wind_Speed">Wind Speed</string>
    <string name="Wind_Speed_Details">Wind Speed Details</string>
    <string name="mps">m/s</string>
    <string name="km_h">Km/h</string>
    <string name="mph">mph</string>
    <string name="Knots">Knots</string>
    <string name="Rainfall">Rainfall</string>
    <string name="Rainfall_Details">Rainfall Details</string>
    <string name="Millimeters">mm</string>
    <string name="Inches">in</string>
    <string name="Notifications">Notifications</string>
    <string name="Rain_Notification">Rain Notifications [Currently Unavailable]</string>
    <string name="Severe_Weather_Warnings">Severe Weather Warnings</string>
    <string name="Daily_Summary">Daily Summary [Currently Unavailable]</string>
    <string name="menu_home">Home</string>
    <string name="FeelsLikeTemperature">Feels Like Temperature</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_recommendations">Recommendations</string>
</resources>