<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/location_on_24"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_recommendations"
            android:icon="@drawable/baseline_lightbulb_24"
            android:title="@string/menu_recommendations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:title="Log Out"
            android:icon="@drawable/user_icon"/>
    </group>
</menu>