<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skysphere.skysphere.ui.home.HomePageFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_settings"
            app:destination="@id/nav_settings"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/slide_down"
            app:popEnterAnim="@anim/slide_up"
            app:popExitAnim="@anim/slide_down"/>

        <action
            android:id="@+id/action_nav_current_details"
            app:destination="@id/nav_current_details"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/slide_down"
            app:popEnterAnim="@anim/slide_up"
            app:popExitAnim="@anim/slide_down"/>

        <action
            android:id="@+id/action_nav_daily_details"
            app:destination="@id/nav_daily_details"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/slide_down"
            app:popEnterAnim="@anim/slide_up"
            app:popExitAnim="@anim/slide_down"/>
    </fragment>

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.skysphere.skysphere.ui.location.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/nav_recommendations"
        android:name="com.skysphere.skysphere.ui.recommendations.WeatherRecommendationsFragment"
        android:label="@string/menu_recommendations"
        tools:layout="@layout/fragment_weather_recommendations" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.skysphere.skysphere.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.skysphere.skysphere.ui.LoginFragment"
        android:label="Log In"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.skysphere.skysphere.ui.SignupFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/nav_current_details"
        android:name="com.skysphere.skysphere.ui.details.CurrentDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_current_details" />

    <fragment
        android:id="@+id/nav_daily_details"
        android:name="com.skysphere.skysphere.ui.details.DailyDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_daily_details" />

</navigation>
